--- a/src/components/todo-list/ToDoList.css
+++ b/src/components/todo-list/ToDoList.css
@@ -41,4 +41,14 @@
 
 .todolist .todolist-footer {
   display: flex;
+  margin-top: 10px;
 }
+
+.todolist .todolist-footer div {
+  padding: 3px;
+}
+
+.todolist .todolist-footer button {
+    margin: 10px;
+    margin-top: 0px;
+  }
