changed color in css

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #c085a1;
+  background-color: #f1b7d4;
   display: flex;
   flex-direction: column;
   align-items: center;
